fixed button-container-interview to fixed height to avoid collapse in code mode

--- a/interviewer-ui/src/pages/Interview/Interview.css
+++ b/interviewer-ui/src/pages/Interview/Interview.css
@@ -75,6 +75,7 @@
   flex-direction:row-reverse;
   justify-items: flex-end;
   justify-content: space-between;
+  height:3rem;
 }
 
 .button-is-code {
